Multi-module refactor