@@ -1,10 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>iti.jets.gfive</groupId>
+
     <artifactId>ChatApp</artifactId>
+
     <version>1.0.0</version>
+
+    <packaging>pom</packaging>
+
+    <name>ChatApp</name>
+
+    <modules>
+
+        <module>ChatServer</module>
+        <module>ChatClient</module>
+
+    </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,6 +34,8 @@
         <mysql-connector.version>8.0.23</mysql-connector.version>
         <jfoenix.version>9.0.10</jfoenix.version>
         <commons.version>3.10</commons.version>
+        <goldrenard-ab.version>1.0.3</goldrenard-ab.version>
+        <fontawesomefx-fontawesome.version>4.7.0-9.1.2</fontawesomefx-fontawesome.version>
     </properties>
 
     <dependencies>
@@ -107,7 +125,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-connector.version}</version>
-<!--            <scope>runtime</scope>-->
+            <!--            <scope>runtime</scope>-->
         </dependency>
 
         <dependency>
@@ -125,13 +143,13 @@
         <dependency>
             <groupId>org.goldrenard</groupId>
             <artifactId>ab</artifactId>
-            <version>1.0.3</version>
+            <version>${goldrenard-ab.version}</version>
         </dependency>
 
         <dependency>
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx-fontawesome</artifactId>
-            <version>4.7.0-9.1.2</version>
+            <version>${fontawesomefx-fontawesome.version}</version>
         </dependency>
 
     </dependencies>
@@ -152,7 +170,6 @@
     </repositories>
 
     <build>
-
         <plugins>
             <plugin>
                 <groupId>org.openjfx</groupId>
@@ -161,7 +178,47 @@
                 <configuration>
                     <launcher>hellofx</launcher>
                     <jlinkImageName>hello</jlinkImageName>
-                    <mainClass>${project.groupId}.Main</mainClass>
+                    <mainClass>${artifactId}/${project.groupId}.Main</mainClass>
+
+                    <options>
+                        <!--===========================================CONTROL FX CONFIGS============================================-->
+                        <!--                        Opening Controls-->
+                        <option>--add-opens</option>
+                        <option>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+                        <!--                        Table Row expander Column-->
+                        <option>--add-opens</option>
+                        <option>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
+                        <!--                        Notification Pane Adding-->
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
+                        <!--                        Auto complete binding adding-->
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                        <!--                        Glyph Font Adding-->
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
+                        <!--===============================================JFOENIX CONFIGS========================================-->
+                        <option>--add-opens</option>
+                        <option>java.base/java.lang.reflect=com.jfoenix</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/javafx.css=com.jfoenix</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
+                    </options>
                 </configuration>
             </plugin>
 
@@ -177,8 +234,9 @@
                         <configuration>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>${project.groupId}.Main</mainClass>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${artifactId}/${project.groupId}.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
